[gd_scene load_steps=3 format=2]

[ext_resource path="res://Fonts/PixelSansSerif.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/GameList/GameList.gd" type="Script" id=2]


[node name="GameList" type="VBoxContainer"]
margin_left = 954.0
margin_right = 1896.0
margin_bottom = 1056.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 942.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 1 )
text = "Game List"

[node name="ItemList" type="ItemList" parent="."]
margin_top = 53.0
margin_right = 942.0
margin_bottom = 993.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )

[node name="GameName" type="LineEdit" parent="."]
margin_top = 997.0
margin_right = 942.0
margin_bottom = 1056.0
custom_fonts/font = ExtResource( 1 )
placeholder_text = "Create Game"
[connection signal="item_activated" from="ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="text_changed" from="GameName" to="." method="_on_GameName_text_changed"]
[connection signal="text_entered" from="GameName" to="." method="_on_GameName_text_entered"]
